recursion.cons.lessons.recursion.cons.AllDifferent.scala.error
allDifferent:4: error: not found: value occurences
  } else if (occurences(l,l.head)=!1) {
             ^